--- a/tasks/section1.yml
+++ b/tasks/section1.yml
@@ -10,7 +10,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.1
+    - centos7cis_rule_1.1.1.1
     - cramfs
 
 - name: "SCORED | 1.1.1.2 | PATCH | Ensure mounting of freevxfs filesystems is disabled"
@@ -25,7 +25,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.2
+    - centos7cis_rule_1.1.1.2
     - freevxfs
 
 - name: "SCORED | 1.1.1.3 | PATCH | Ensure mounting of jffs2 filesystems is disabled"
@@ -40,7 +40,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.3
+    - centos7cis_rule_1.1.1.3
     - jffs2
 
 - name: "SCORED | 1.1.1.4 | PATCH | Ensure mounting of hfs filesystems is disabled"
@@ -55,7 +55,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.4
+    - centos7cis_rule_1.1.1.4
     - hfs
 
 - name: "SCORED | 1.1.1.5 | PATCH | Ensure mounting of hfsplus filesystems is disabled"
@@ -70,7 +70,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.5
+    - centos7cis_centos7cis_rule_1.1.1.5
     - hfsplus
 
 - name: "SCORED | 1.1.1.6 | PATCH | Ensure mounting of squashfs filesystems is disabled"
@@ -85,7 +85,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.6
+    - centos7cis_rule_1.1.1.6
     - squashfs
 
 - name: "SCORED | 1.1.1.7 | PATCH | Ensure mounting of udf filesystems is disabled"
@@ -100,7 +100,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.7
+    - centos7cis_rule_1.1.1.7
     - udf
 
 - name: "SCORED | 1.1.1.8 | PATCH | Ensure mounting of FAT filesystems is disabled"
@@ -115,7 +115,7 @@
     - level1
     - scored
     - patch
-    - rule_1.1.1.8
+    - centos7cis_rule_1.1.1.8
     - vfat
 
 - name: "SCORED | 1.1.2 | PATCH | Ensure separate partition exists for /tmp | enable and start/restart tmp.mount"
@@ -131,7 +131,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.2
+    - centos7cis_rule_1.1.2
 
 - name: "SCORED | 1.1.3 | PATCH | Ensure nodev option set on /tmp partition\n
          SCORED | 1.1.4 | PATCH | Ensure nosuid option set on /tmp partition\n
@@ -150,9 +150,9 @@
     - level1
     - scored
     - patch
-    - rule_1.1.3
-    - rule_1.1.4
-    - rule_1.1.5
+    - centos7cis_rule_1.1.3
+    - centos7cis_rule_1.1.4
+    - centos7cis_rule_1.1.5
 
 - name: "SCORED | 1.1.6 | PATCH | Ensure separate partition exists for /var"
   shell: |
@@ -169,7 +169,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.6
+    - centos7cis_rule_1.1.6
 
 - name: "SCORED | 1.1.7 | PATCH | Ensure separate partition exists for /var/tmp"
   shell: |
@@ -186,7 +186,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.7
+    - centos7cis_rule_1.1.7
 
 - name: "SCORED | 1.1.8 | PATCH | Ensure nodev option set on /var/tmp partition\n
          SCORED | 1.1.9 | PATCH | Ensure nosuid option set on /var/tmp partition\n
@@ -203,9 +203,9 @@
     - level1
     - scored
     - patch
-    - rule_1.1.8
-    - rule_1.1.9
-    - rule_1.1.10
+    - centos7cis_rule_1.1.8
+    - centos7cis_rule_1.1.9
+    - centos7cis_rule_1.1.10
     - low
 
 - name: "SCORED | 1.1.11 | PATCH | Ensure separate partition exists for /var/log"
@@ -223,7 +223,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.11
+    - centos7cis_rule_1.1.11
 
 - name: "SCORED | 1.1.12 | PATCH | Ensure separate partition exists for /var/log/audit"
   shell: |
@@ -240,7 +240,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.12
+    - centos7cis_rule_1.1.12
 
 - name: "SCORED | 1.1.13 | PATCH | Ensure separate partition exists for /home"
   shell: |
@@ -257,7 +257,7 @@
     - level2
     - scored
     - patch
-    - rule_1.1.13
+    - centos7cis_rule_1.1.13
 
 - name: "SCORED | 1.1.14 | PATCH | Ensure nodev option set on /home partition"
   mount:
@@ -270,7 +270,7 @@
     - level1
     - level2
     - patch
-    - rule_1.1.14
+    - centos7cis_rule_1.1.14
     - user_check
   when:
     - centos7cis_level2 is defined and centos7cis_level2
@@ -293,9 +293,9 @@
     - level1
     - scored
     - patch
-    - rule_1.1.15
-    - rule_1.1.16
-    - rule_1.1.17
+    - centos7cis_rule_1.1.15
+    - centos7cis_rule_1.1.16
+    - centos7cis_rule_1.1.17
 
 - name: "NOTSCORED | 1.1.18 | PATCH | Ensure nodev option set on removable media partitions"
   command: /bin/true
@@ -306,7 +306,7 @@
     - level1
     - notscored
     - patch
-    - rule_1.1.18
+    - centos7cis_rule_1.1.18
 
 - name: "NOTSCORED | 1.1.19 | PATCH | Ensure nosuid option set on removable media partitions"
   command: /bin/true
@@ -317,7 +317,7 @@
     - level1
     - notscored
     - patch
-    - rule_1.1.19
+    - centos7cis_rule_1.1.19
 
 - name: "NOTSCORED | 1.1.20 | PATCH | Ensure noexec option set on removable media partitions"
   command: /bin/true
@@ -328,7 +328,7 @@
     - level1
     - notscored
     - patch
-    - rule_1.1.20
+    - centos7cis_rule_1.1.20
 
 - name: "SCORED | 1.1.21 | PATCH | Ensure sticky bit is set on all world-writable directories"
   shell: |
@@ -342,7 +342,7 @@
   tags:
     - level1
     - patch
-    - rule_1.1.21
+    - centos7cis_rule_1.1.21
 
 - name: "SCORED | 1.1.22 | PATCH | Disable Automounting"
   systemd:
@@ -355,7 +355,7 @@
   tags:
     - level1
     - patch
-    - rule_1.1.22
+    - centos7cis_rule_1.1.22
 
 - name: "NOTSCORED | 1.2.1 | PATCH | Ensure package manager repositories are configured"
   command: /bin/true
@@ -366,7 +366,7 @@
     - level1
     - notscored
     - patch
-    - rule_1.2.1
+    - centos7cis_rule_1.2.1
 
 - name: "SCORED | 1.2.2 | PATCH | Ensure gpgcheck is globally activated"
   replace:
@@ -379,7 +379,7 @@
     - level1
     - scored
     - patch
-    - rule_1.2.2
+    - centos7cis_rule_1.2.2
 
 - name: "SCORED | 1.2.2 | PATCH | Ensure gpgcheck is globally activated"
   find:
@@ -393,7 +393,7 @@
     - level1
     - scored
     - patch
-    - rule_1.2.2
+    - centos7cis_rule_1.2.2
 
 - name: "SCORED | 1.2.2 | PATCH | Ensure gpgcheck is globally activated"
   replace:
@@ -408,7 +408,7 @@
     - level1
     - scored
     - patch
-    - rule_1.2.2
+    - centos7cis_rule_1.2.2
 
 - name: "NOTSCORED | 1.2.3 | PATCH | Ensure GPG keys are configured"
   command: /bin/true
@@ -419,7 +419,7 @@
     - level1
     - notscored
     - patch
-    - rule_1.2.3
+    - centos7cis_rule_1.2.3
 
 - name: "SCORED | 1.3.1 | PATCH | Ensure AIDE is installed"
   yum:
@@ -432,7 +432,7 @@
     - scored
     - aide
     - patch
-    - rule_1.3.1
+    - centos7cis_rule_1.3.1
 
 - name: "SCORED | 1.3.1 | PATCH | Ensure AIDE is installed"
   command: /usr/sbin/aide --init -B 'database_out=file:/var/lib/aide/aide.db.gz'
@@ -448,7 +448,7 @@
     - scored
     - aide
     - patch
-    - rule_1.3.1
+    - centos7cis_rule_1.3.1
 
 - name: "SCORED | 1.3.2 | PATCH | Ensure filesystem integrity is regularly checked"
   cron:
@@ -469,7 +469,7 @@
     - aide
     - file_integrity
     - patch
-    - rule_1.3.2
+    - centos7cis_rule_1.3.2
 
 - name: "SCORED | 1.3.2 | PATCH | Ensure filesystem integrity is regularly checked"
   cron:
@@ -490,7 +490,7 @@
     - aide
     - file_integrity
     - patch
-    - rule_1.3.2
+    - centos7cis_rule_1.3.2
 
 - name: "SCORED | 1.4.1 | PATCH | Ensure permissions on bootloader config are configured"
   stat:
@@ -502,7 +502,7 @@
     - scored
     - grub
     - patch
-    - rule_1.4.1
+    - centos7cis_rule_1.4.1
 
 - name: "SCORED | 1.4.1 | PATCH | Ensure permissions on bootloader config are configured"
   file:
@@ -518,7 +518,7 @@
     - scored
     - grub
     - patch
-    - rule_1.4.1
+    - centos7cis_rule_1.4.1
 
 - name: "SCORED | 1.4.2 | PATCH | Ensure bootloader password is set"
   grub_crypt:
@@ -532,7 +532,7 @@
     - scored
     - grub
     - patch
-    - rule_1.4.2
+    - centos7cis_rule_1.4.2
 
 - name: "SCORED | 1.4.2 | PATCH | Ensure bootloader password is set"
   copy:
@@ -547,7 +547,7 @@
     - scored
     - grub
     - patch
-    - rule_1.4.2
+    - centos7cis_rule_1.4.2
 
 - name: "NOTSCORED | 1.4.3 | PATCH | Ensure authentication required for single user mode"
   command: /bin/true
@@ -557,7 +557,7 @@
   tags:
     - level2
     - patch
-    - rule_1.4.3
+    - centos7cis_rule_1.4.3
 
 - name: "SCORED | 1.5.1 | PATCH | Ensure core dumps are restricted"
   lineinfile:
@@ -573,7 +573,7 @@
     - scored
     - limits
     - patch
-    - rule_1.5.1
+    - centos7cis_rule_1.5.1
 
 - name: "SCORED | 1.5.1 | PATCH | Ensure core dumps are restricted"
   sysctl:
@@ -590,7 +590,7 @@
     - scored
     - sysctl
     - patch
-    - rule_1.5.1
+    - centos7cis_rule_1.5.1
 
 - name: "NOTSCORED | 1.5.2 | PATCH | Ensure XD/NX support is enabled"
   command: /bin/true
@@ -600,7 +600,7 @@
   tags:
     - level2
     - patch
-    - rule_1.5.2
+    - centos7cis_rule_1.5.2
 
 - name: "SCORED | 1.5.3 | PATCH | Ensure address space layout randomization (ASLR) is enabled"
   sysctl:
@@ -616,7 +616,7 @@
     - level1
     - scored
     - patch
-    - rule_1.5.3
+    - centos7cis_rule_1.5.3
 
 - name: "SCORED | 1.5.4 | PATCH | Ensure prelink is disabled"
   command: prelink -ua
@@ -627,7 +627,7 @@
     - level1
     - scored
     - patch
-    - rule_1.5.4
+    - centos7cis_rule_1.5.4
 
 - name: "SCORED | 1.5.4 | PATCH | Ensure prelink is disabled"
   yum:
@@ -639,7 +639,7 @@
     - level1
     - scored
     - patch
-    - rule_1.5.4
+    - centos7cis_rule_1.5.4
 
 - name: "SCORED | 1.6.1.1 | PATCH | Ensure SELinux is not disabled in bootloader configuration"
   replace:
@@ -655,7 +655,7 @@
     - level2
     - scored
     - patch
-    - rule_1.6.1.1
+    - centos7cis_rule_1.6.1.1
 
 - name: "SCORED | 1.6.1.2 | PATCH | Ensure the SELinux state is enforcing"
   selinux:
@@ -670,7 +670,7 @@
     - scored
     - selinux
     - patch
-    - rule_1.6.1.2
+    - centos7cis_rule_1.6.1.2
 
 - name: "SCORED | 1.6.1.3 | PATCH | Ensure SELinux policy is configured"
   selinux:
@@ -685,7 +685,7 @@
     - scored
     - selinux
     - patch
-    - rule_1.6.1.3
+    - centos7cis_rule_1.6.1.3
 
 - name: "SCORED | 1.6.1.4 | PATCH | Ensure SETroubleshoot is not installed"
   yum:
@@ -698,7 +698,7 @@
     - scored
     - selinux
     - patch
-    - rule_1.6.1.4
+    - centos7cis_rule_1.6.1.4
 
 - name: "SCORED | 1.6.1.5 | PATCH | Ensure the MCS Translation Service (mcstrans) is not installed"
   yum:
@@ -710,7 +710,7 @@
     - level2
     - scored
     - patch
-    - rule_1.6.1.5
+    - centos7cis_rule_1.6.1.5
 
 - name: "SCORED | 1.6.2 | PATCH | Ensure SELinux is installed"
   yum:
@@ -722,7 +722,7 @@
     - level2
     - scored
     - patch
-    - rule_1.6.2
+    - centos7cis_rule_1.6.2
 
 - name: "SCORED | 1.7.1.1 | PATCH | Ensure message of the day is configured properly"
   template:
@@ -734,7 +734,7 @@
     - level1
     - banner
     - patch
-    - rule_1.7.1.1
+    - centos7cis_rule_1.7.1.1
 
 - name: "NOTSCORED | 1.7.1.2 | PATCH | Ensure local login warning banner is configured properly"
   template:
@@ -745,7 +745,7 @@
   tags:
     - level1
     - patch
-    - rule_1.7.1.2
+    - centos7cis_rule_1.7.1.2
 
 - name: "NOTSCORED | 1.7.1.3 | PATCH | Ensure remote login warning banner is configured properly"
   template:
@@ -757,7 +757,7 @@
     - level1
     - banner
     - patch
-    - rule_1.7.1.3
+    - centos7cis_rule_1.7.1.3
 
 - name: "NOTSCORED | 1.7.1.4 | PATCH | Ensure permissions on /etc/motd are configured"
   file:
@@ -772,7 +772,7 @@
     - level1
     - perms
     - patch
-    - rule_1.7.1.4
+    - centos7cis_rule_1.7.1.4
 
 - name: "SCORED | 1.7.1.5 | PATCH | Ensure permissions on /etc/issue are configured"
   file:
@@ -787,7 +787,7 @@
     - level1
     - perms
     - patch
-    - rule_1.7.1.5
+    - centos7cis_rule_1.7.1.5
 
 - name: "NOTSCORED | 1.7.1.6 | PATCH | Ensure permissions on /etc/issue.net are configured"
   file:
@@ -802,7 +802,7 @@
     - level1
     - perms
     - patch
-    - rule_1.7.1.6
+    - centos7cis_rule_1.7.1.6
 
 - name: "SCORED | 1.7.2 | PATCH | Ensure GDM login banner is configured"
   debug:
@@ -814,7 +814,7 @@
   tags:
     - level1
     - patch
-    - rule_1.7.2
+    - centos7cis_rule_1.7.2
 
 - name: "NOTSCORED | 1.8 | PATCH | Ensure updates, patches, and additional security software are installed"
   yum:
@@ -826,4 +826,4 @@
   tags:
     - level1
     - patch
-    - rule_1.8
+    - centos7cis_rule_1.8
