--- a/tasks/section6.yml
+++ b/tasks/section6.yml
@@ -6,7 +6,7 @@
   tags:
     - level2
     - patch
-    - rule_6.1.1
+    - centos7cis_rule_6.1.1
 
 - name: "SCORED | 6.1.2 | PATCH | Ensure permissions on /etc/passwd are configured"
   file:
@@ -20,7 +20,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.2
+    - centos7cis_rule_6.1.2
 
 - name: "SCORED | 6.1.3 | PATCH | Ensure permissions on /etc/shadow are configured"
   file:
@@ -34,7 +34,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.3
+    - centos7cis_rule_6.1.3
 
 - name: "SCORED | 6.1.4 | PATCH | Ensure permissions on /etc/group are configured"
   file:
@@ -48,7 +48,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.4
+    - centos7cis_rule_6.1.4
 
 - name: "SCORED | 6.1.5 | PATCH | Ensure permissions on /etc/gshadow are configured"
   file:
@@ -62,7 +62,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.5
+    - centos7cis_rule_6.1.5
 
 - name: "SCORED | 6.1.6 | PATCH | Ensure permissions on /etc/passwd- are configured"
   file:
@@ -76,7 +76,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.6
+    - centos7cis_rule_6.1.6
 
 - name: "SCORED | 6.1.7 | PATCH | Ensure permissions on /etc/shadow- are configured"
   file:
@@ -90,7 +90,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.7
+    - centos7cis_rule_6.1.7
 
 - name: "SCORED | 6.1.8 | PATCH | Ensure permissions on /etc/group- are configured"
   file:
@@ -104,7 +104,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.8
+    - centos7cis_rule_6.1.8
 
 - name: "SCORED | 6.1.9 | PATCH | Ensure permissions on /etc/gshadow- are configured"
   file:
@@ -118,7 +118,7 @@
     - level1
     - low
     - patch
-    - rule_6.1.9
+    - centos7cis_rule_6.1.9
 
 - name: "SCORED | 6.1.10 | PATCH | Ensure no world writable files exist"
   command: /bin/true
@@ -128,7 +128,7 @@
   tags:
     - level1
     - patch
-    - rule_6.1.10
+    - centos7cis_rule_6.1.10
 
 - name: "SCORED | 6.1.11 | PATCH | Ensure no unowned files or directories exist"
   command: /bin/true
@@ -138,7 +138,7 @@
   tags:
     - level1
     - patch
-    - rule_6.1.11
+    - centos7cis_rule_6.1.11
 
 - name: "SCORED | 6.1.12 | PATCH | Ensure no ungrouped files or directories exist"
   command: /bin/true
@@ -148,7 +148,7 @@
   tags:
     - level1
     - patch
-    - rule_6.1.12
+    - centos7cis_rule_6.1.12
 
 - name: "NOTSCORED | 6.1.13 | PATCH | Audit SUID executables"
   command: /bin/true
@@ -158,7 +158,7 @@
   tags:
     - level1
     - patch
-    - rule_6.1.13
+    - centos7cis_rule_6.1.13
 
 - name: "NOTSCORED | 6.1.14 | PATCH | Audit SGID executables"
   command: /bin/true
@@ -168,7 +168,7 @@
   tags:
     - level1
     - patch
-    - rule_6.1.14
+    - centos7cis_rule_6.1.14
 
 - name: "SCORED | 6.2.1 | PATCH | Ensure password fields are not empty"
   command: passwd -l {{ item }}
@@ -181,7 +181,7 @@
     - level1
     - low
     - patch
-    - rule_6.2.1
+    - centos7cis_rule_6.2.1
 
 - name: "SCORED | 6.2.2 | PATCH | Ensure no legacy '+' entries exist in /etc/passwd"
   command: "sed -i '/^+/ d' /etc/passwd"
@@ -194,7 +194,7 @@
   tags:
     - level1
     - patch
-    - rule_6.2.2
+    - centos7cis_rule_6.2.2
 
 - name: "SCORED | 6.2.3 | PATCH | Ensure no legacy '+' entries exist in /etc/shadow"
   command: "sed -i '/^+/ d' /etc/shadow"
@@ -208,7 +208,7 @@
     - level1
     - low
     - patch
-    - rule_6.2.3
+    - centos7cis_rule_6.2.3
 
 - name: "SCORED | 6.2.4 | PATCH | Ensure no legacy '+' entries exist in /etc/group"
   command: "sed -i '/^+/ d' /etc/group"
@@ -222,7 +222,7 @@
     - level1
     - low
     - patch
-    - rule_6.2.4
+    - centos7cis_rule_6.2.4
 
 - name: "SCORED | 6.2.5 | PATCH | Ensure root is the only UID 0 account"
   command: passwd -l {{ item }}
@@ -235,7 +235,7 @@
     - level1
     - low
     - patch
-    - rule_6.2.5
+    - centos7cis_rule_6.2.5
 
 - name: "SCORED | 6.2.6 | PATCH | Ensure root PATH Integrity"
   copy:
@@ -245,7 +245,7 @@
     group: root
     mode: 0700
   tags:
-    - rule_6.2.6
+    - centos7cis_rule_6.2.6
     - low
     - level1
     - low
@@ -261,7 +261,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.6
+    - centos7cis_rule_6.2.6
     - low
     - level1
     - low
@@ -274,7 +274,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.6
+    - centos7cis_rule_6.2.6
     - low
     - level1
     - low
@@ -287,7 +287,7 @@
 #     - root_path_integrity is defined
 #     - root_path_integrity.stdout != ""
 #   tags:
-#     - rule_6.2.6
+#     - centos7cis_rule_6.2.6
 #     - low
 #     - level1
 #     - low
@@ -300,7 +300,7 @@
     - root_path_integrity is defined
     - root_path_integrity.stdout == ""
   tags:
-    - rule_6.2.6
+    - centos7cis_rule_6.2.6
     - low
     - level1
     - low
@@ -315,7 +315,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.6
+    - centos7cis_rule_6.2.6
     - low
     - level1
     - low
@@ -331,7 +331,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.7
+    - centos7cis_rule_6.2.7
     - low
     - level1
     - low
@@ -344,7 +344,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.7
+    - centos7cis_rule_6.2.7
     - low
     - level1
     - low
@@ -357,7 +357,7 @@
 #     - home_directories_exist is defined
 #     - home_directories_exist.stdout != ""
 #   tags:
-#     - rule_6.2.7
+#     - centos7cis_rule_6.2.7
 #     - low
 #     - level1
 #     - low
@@ -370,7 +370,7 @@
     - home_directories_exist is defined
     - home_directories_exist.stdout == ""
   tags:
-    - rule_6.2.7
+    - centos7cis_rule_6.2.7
     - low
     - level1
     - low
@@ -385,7 +385,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.7
+    - centos7cis_rule_6.2.7
     - low
     - level1
     - low
@@ -402,7 +402,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_user_homes is defined and centos7cis_modify_user_homes
   tags:
-    - rule_6.2.8
+    - centos7cis_rule_6.2.8
     - level1
     - patch
     - low
@@ -416,7 +416,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_user_homes is defined and centos7cis_modify_user_homes
   tags:
-    - rule_6.2.8
+    - centos7cis_rule_6.2.8
     - level1
     - patch
     - low
@@ -429,7 +429,7 @@
 #     - centos7cis_modify_user_homes is defined and home_directories_permissions is defined
 #     - centos7cis_modify_user_homes
 #   tags:
-#     - rule_6.2.8
+#     - centos7cis_rule_6.2.8
 #     - level1
 #     - patch
 #     - low
@@ -442,7 +442,7 @@
     - centos7cis_modify_user_homes is defined and centos7cis_modify_user_homes
     - home_directories_permissions is defined and home_directories_permissions.stdout == ""
   tags:
-    - rule_6.2.8
+    - centos7cis_rule_6.2.8
     - level1
     - patch
     - low
@@ -458,7 +458,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_user_homes is defined and centos7cis_modify_user_homes
   tags:
-    - rule_6.2.8
+    - centos7cis_rule_6.2.8
     - level1
     - patch
     - low
@@ -474,7 +474,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.9
+    - centos7cis_rule_6.2.9
     - level1
     - patch
     - low
@@ -488,7 +488,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.9
+    - centos7cis_rule_6.2.9
     - level1
     - patch
     - low
@@ -499,7 +499,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.9
+#     - centos7cis_rule_6.2.9
 #     - level1
 #     - patch
 
@@ -510,7 +510,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - home_directories_own is defined and home_directories_own.stdout == ""
   tags:
-    - rule_6.2.9
+    - centos7cis_rule_6.2.9
     - level1
     - patch
     - low
@@ -525,7 +525,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.9
+    - centos7cis_rule_6.2.9
     - level1
     - patch
     - low
@@ -541,7 +541,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.10
+    - centos7cis_rule_6.2.10
     - patch
     - level1
     - low
@@ -555,7 +555,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.10
+    - centos7cis_rule_6.2.10
     - patch
     - level1
     - low
@@ -566,7 +566,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.10
+#     - centos7cis_rule_6.2.10
 #     - level1
 #     - patch
 #     - low
@@ -578,7 +578,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - user_dot_files is defined and user_dot_files.stdout == ""
   tags:
-    - rule_6.2.10
+    - centos7cis_rule_6.2.10
     - level1
     - patch
     - low
@@ -593,7 +593,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.10
+    - centos7cis_rule_6.2.10
     - patch
     - level1
     - low
@@ -608,7 +608,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_forward_files is defined and centos7cis_modify_dot_forward_files
   tags:
-    - rule_6.2.11
+    - centos7cis_rule_6.2.11
     - patch
     - level1
     - low
@@ -623,7 +623,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_netrc_files is defined and centos7cis_modify_dot_netrc_files
   tags:
-    - rule_6.2.12
+    - centos7cis_rule_6.2.12
     - patch
     - level1
     - low
@@ -640,7 +640,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_netrc_files_group is defined and centos7cis_modify_dot_netrc_files_group
   tags:
-    - rule_6.2.13
+    - centos7cis_rule_6.2.13
     - patch
     - level1
     - low
@@ -655,7 +655,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_netrc_files_group is defined and centos7cis_modify_dot_netrc_files_group
   tags:
-    - rule_6.2.13
+    - centos7cis_rule_6.2.13
     - patch
     - level1
     - low
@@ -666,7 +666,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.13
+#     - centos7cis_rule_6.2.13
 #     - patch
 #     - level1
 #     - low
@@ -679,7 +679,7 @@
     - centos7cis_modify_dot_netrc_files_group is defined and centos7cis_modify_dot_netrc_files_group
     - dot_netrc_files is defined and dot_netrc_files.stdout == ""
   tags:
-    - rule_6.2.13
+    - centos7cis_rule_6.2.13
     - patch
     - level1
     - low
@@ -695,7 +695,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_netrc_files_group is defined and centos7cis_modify_dot_netrc_files_group
   tags:
-    - rule_6.2.13
+    - centos7cis_rule_6.2.13
     - patch
     - level1
     - low
@@ -710,7 +710,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - centos7cis_modify_dot_rhosts_files is defined and centos7cis_modify_dot_rhosts_files
   tags:
-    - rule_6.2.14
+    - centos7cis_rule_6.2.14
     - patch
     - level1
     - low
@@ -726,7 +726,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.15
+    - centos7cis_rule_6.2.15
     - patch
     - level1
     - low
@@ -740,7 +740,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.15
+    - centos7cis_rule_6.2.15
     - patch
     - level1
     - low
@@ -751,7 +751,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.15
+#     - centos7cis_rule_6.2.15
 #     - patch
 #     - level1
 #     - low
@@ -763,7 +763,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - check_groups_in_passwd is defined and check_groups_in_passwd.stdout == ""
   tags:
-    - rule_6.2.15
+    - centos7cis_rule_6.2.15
     - patch
     - level1
     - low
@@ -778,7 +778,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.15
+    - centos7cis_rule_6.2.15
     - patch
     - level1
     - low
@@ -794,7 +794,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.16
+    - centos7cis_rule_6.2.16
     - patch
     - level1
     - low
@@ -808,7 +808,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.16
+    - centos7cis_rule_6.2.16
     - patch
     - level1
     - low
@@ -819,7 +819,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.16
+#     - centos7cis_rule_6.2.16
 #     - patch
 #     - level1
 #     - low
@@ -831,7 +831,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - duplicate_uids is defined and duplicate_uids.stdout == ""
   tags:
-    - rule_6.2.16
+    - centos7cis_rule_6.2.16
     - patch
     - level1
     - low
@@ -846,7 +846,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.16
+    - centos7cis_rule_6.2.16
     - patch
     - level1
     - low
@@ -862,7 +862,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.17
+    - centos7cis_rule_6.2.17
     - patch
     - level1
     - low
@@ -876,7 +876,7 @@
   no_log: yes
   register: duplicate_gids
   tags:
-    - rule_6.2.17
+    - centos7cis_rule_6.2.17
     - patch
     - level1
     - low
@@ -887,7 +887,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.17
+#     - centos7cis_rule_6.2.17
 #     - patch
 #     - level1
 #     - low
@@ -899,7 +899,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - duplicate_gids is defined and duplicate_gids.stdout == ""
   tags:
-    - rule_6.2.17
+    - centos7cis_rule_6.2.17
     - patch
     - level1
     - low
@@ -914,7 +914,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.17
+    - centos7cis_rule_6.2.17
     - patch
     - level1
     - low
@@ -930,7 +930,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.18
+    - centos7cis_rule_6.2.18
     - patch
     - level1
     - low
@@ -944,7 +944,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.18
+    - centos7cis_rule_6.2.18
     - patch
     - level1
     - low
@@ -955,7 +955,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.18
+#     - centos7cis_rule_6.2.18
 #     - patch
 #     - level1
 #     - low
@@ -967,7 +967,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - duplicate_users is defined and duplicate_users.stdout == ""
   tags:
-    - rule_6.2.18
+    - centos7cis_rule_6.2.18
     - patch
     - level1
     - low
@@ -982,7 +982,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.18
+    - centos7cis_rule_6.2.18
     - patch
     - level1
     - low
@@ -998,7 +998,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.19
+    - centos7cis_rule_6.2.19
     - patch
     - level1
     - low
@@ -1012,7 +1012,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.19
+    - centos7cis_rule_6.2.19
     - patch
     - level1
     - low
@@ -1023,7 +1023,7 @@
 #   when:
 #     - centos7cis_level1 is defined and centos7cis_level1
 #   tags:
-#     - rule_6.2.19
+#     - centos7cis_rule_6.2.19
 #     - patch
 #     - level1
 #     - low
@@ -1035,7 +1035,7 @@
     - centos7cis_level1 is defined and centos7cis_level1
     - duplicate_groups is defined and duplicate_groups.stdout == ""
   tags:
-    - rule_6.2.19
+    - centos7cis_rule_6.2.19
     - patch
     - level1
     - low
@@ -1050,7 +1050,7 @@
   when:
     - centos7cis_level1 is defined and centos7cis_level1
   tags:
-    - rule_6.2.19
+    - centos7cis_rule_6.2.19
     - patch
     - level1
     - low
